# Region5-2026---Jetson-Nano-Orin

./: README.md
workspaces/: run_bench.sh
workspaces/workspaces/isaac_ros-dev/: apriltag_to_odom_node.py  frames_2026-03-20_17.30.47.gv
workspaces/workspaces/isaac_ros-dev/log/: latest_build
workspaces/workspaces/isaac_ros-dev/mining_mayhem_ws/install/: local_setup.sh  setup.sh
workspaces/workspaces/isaac_ros-dev/mining_mayhem_ws/install/mining_mayhem/lib/mining_mayhem/: apriltag_to_odom_node  match_watchdog_node  material_detector_node  mission_state_node  path_planner_node  serial_bridge_node  start_led_detector_node  (+1 more)
workspaces/workspaces/isaac_ros-dev/mining_mayhem_ws/log/: latest_build  latest_list
workspaces/workspaces/isaac_ros-dev/mining_mayhem_ws/src/mining_mayhem/: package.xml  setup.cfg  setup.py
workspaces/workspaces/isaac_ros-dev/mining_mayhem_ws/src/mining_mayhem/config/: apriltag_config.yaml  ekf.yaml  front_camera_calib.yaml  led_camera_calib.yaml
workspaces/workspaces/isaac_ros-dev/mining_mayhem_ws/src/mining_mayhem/launch/: jetson_bringup.launch.py  rviz_bringup.launch.py  vision_stack_smoke_test.launch.py
workspaces/workspaces/isaac_ros-dev/mining_mayhem_ws/src/mining_mayhem/mining_mayhem/: bench_test.py  competition_start.sh  install_competition_service.sh  integration_test.py  match_watchdog_node.py  mining_mayhem.service  mission_state_node.py  path_planner_node.py  serial_bridge_node.py  setup_jetson_network.sh  start_led_detector_node.py  verify_connection.sh
workspaces/workspaces/isaac_ros-dev/ros_ws/mystuff/: Dockerfile.mine
(+13 files in other folders)
