<?xml version="1.0"?>
<package format="3">
  <name>mining_mayhem</name>
  <version>0.1.0</version>
  <description>Mining Mayhem autonomy stack</description>
  <maintainer email="placeholder@example.com">UTEP RAS</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_localization</depend>
  <depend>usb_cam</depend>
  <depend>tf2</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>isaac_ros_apriltag</exec_depend>
  <exec_depend>isaac_ros_apriltag_interfaces</exec_depend>
  <exec_depend>numpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
